[project]
name = "tensor"
version = "0.0.1"
description = "A fastapi+pydantic-ai server for generating tensors."
authors = [
    { name = "Roman", email = "iamromandev@gmail.com" },
]
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "toml>=0.10.2",
    "loguru>=0.7.3",
    "fastapi[all]>=0.121.1",
    "tortoise-orm[accel,aiomysql]>=0.25.1",
    "aerich[mysql,toml]>=0.9.2",
    "redis>=7.0.1",
    "pydantic-ai[examples]>=1.22.0",
    "diffusers>=0.35.2",
    "transformers>=4.57.1",
    "accelerate>=1.12.0",
    "safetensors>=0.7.0",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "ffmpeg-python>=0.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "torchaudio>=2.9.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
    "ty>=0.0.1a25",
]

[tool.uv]
package = false

[tool.aerich]
tortoise_orm = "src.data.DB_CONFIG"
location = "./src/data/migration"
src_folder = "./."
